[gd_scene load_steps=5 format=2]

[ext_resource path="res://Puzzles/Letter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Fonts/Salis MVB Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Puzzles/WordLine.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[node name="WordLine" type="HBoxContainer" groups=["HelpInputs"]]
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 4
script = ExtResource( 3 )

[node name="Letters" type="HBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 48.0
custom_constants/separation = 4

[node name="Letter0" parent="Letters" instance=ExtResource( 1 )]

[node name="Letter1" parent="Letters" instance=ExtResource( 1 )]
margin_left = 52.0
margin_right = 100.0

[node name="Letter2" parent="Letters" instance=ExtResource( 1 )]
margin_left = 104.0
margin_right = 152.0

[node name="Letter3" parent="Letters" instance=ExtResource( 1 )]
margin_left = 156.0
margin_right = 204.0

[node name="Letter4" parent="Letters" instance=ExtResource( 1 )]
margin_left = 208.0
margin_right = 256.0

[node name="RowSummary" type="Control" parent="."]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )

[node name="DefineButton" type="Button" parent="RowSummary"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="RowSummary/DefineButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.137255, 0.137255, 0.172549, 1 )

[node name="Score" type="Label" parent="RowSummary"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -18.0
margin_right = -1.0
margin_bottom = -4.0
text = "10"
align = 2

[node name="DefinitionLabel" type="Label" parent="RowSummary"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -25.0
margin_right = 9.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "?"

[connection signal="focus_forward" from="Letters/Letter0" to="." method="_on_Letter0_focus_forward"]
[connection signal="focus_forward" from="Letters/Letter1" to="." method="_on_Letter1_focus_forward"]
[connection signal="focus_forward" from="Letters/Letter2" to="." method="_on_Letter2_focus_forward"]
[connection signal="focus_forward" from="Letters/Letter3" to="." method="_on_Letter3_focus_forward"]
[connection signal="focus_forward" from="Letters/Letter4" to="." method="_on_Letter4_focus_forward"]
[connection signal="pressed" from="RowSummary/DefineButton" to="." method="_on_DefineButton_pressed"]
